insert a few more outline notes

--- a/packet/main.tex
+++ b/packet/main.tex
@@ -69,10 +69,12 @@
 \subsection{Introduction}
 
 \subsection{Randomness in Cryptography}
+Define \emph{information-theoretic security}.
 
 \subsection{Sharing Secrets}
 \emph{Secret sharing} is a way to...
 
+\newpage
 \section{A simple secret sharing}
 
 \subsection{Binary Arithmetic}
@@ -94,11 +96,15 @@ The exclusive-OR (XOR) operation is denoted by the symbol $\oplus$ and defined b
 \newpage
 \section{Shamir's Secret Sharing}
 \subsection{Polynomials}
+y-intercept, zeroes
+
 \subsubsection{Uniqueness}
+How many points uniquely define a polynomial
 
 \begin{exercise}
 \end{exercise}
 
 \subsection{Sharing Secrets Using Polynomials}
+Don't introduce finite fields but maybe make a note that this should be done over finite fields.
 
 \end{document}
