clean explanations, print statemtents, etc

--- a/spring/ShamirSS.ipynb
+++ b/spring/ShamirSS.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's import some helper functions for dealing with polynomials."
+    "First, let's import some \"helper\" functions for dealing with polynomials."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Share\n",
-    "Here is our sharing function:"
+    "Here is our sharing function. It takes as input `s` (the secret), `n` (the number of parties to share amongst), `t` (the degree of the polynomial used for sharing, so t+1 is the minimum number of parties needed to reconstruct the secret), and `p` (**REMOVE THIS?**). The input `printout` tells the function whether it should print an explanation while it's working or not."
    ]
   },
   {
@@ -38,9 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def share(s, n, t, p):\n",
+    "def share(s, n, t, p, printout=False):\n",
     "    # check p\n",
-    "    if not sympy.isprime(p):\n",
+    "    if not isprime(p):\n",
     "        print(\"p={} is not prime!\".format(p))\n",
     "        return\n",
     "    if p <= n:\n",
@@ -57,37 +57,40 @@
     "        print(\"s={} must be less than p={}\".format(s, p))\n",
     "        return\n",
     "        \n",
+    "    ### the interesting part ###########################\n",
     "    coeffs = []\n",
     "    for i in range(t):\n",
     "        # sample coefficients from F_p = {0, ..., p-1}\n",
-    "        coeffs.append(random.randint(0,p-1))\n",
-    "    # secret is the y-intercept\n",
+    "        coeffs.append(randint(0,p-1))\n",
+    "    # secret is the y-intercept / constant term of the poly\n",
     "    coeffs.append(s)\n",
     "    \n",
     "    shares = []\n",
     "    for i in range(1,n+1):\n",
     "        shares.append((i, eval_poly(coeffs, i)))\n",
+    "    #####################################################\n",
     "        \n",
-    "    # plot the polynomial\n",
-    "    print(\"The random degree t={} polynomial is\".format(t))\n",
-    "    print_poly(coeffs)\n",
-    "    x = np.linspace(0, n, n+1)\n",
-    "    y = [eval_poly(coeffs, i) for i in x]\n",
-    "    plt.plot(x, y)\n",
+    "    if printout:\n",
+    "        # plot the polynomial\n",
+    "        print(\"The random degree t={} polynomial is\".format(t))\n",
+    "        print_poly(coeffs)\n",
+    "        x = linspace(0, n, n+1)\n",
+    "        y = [eval_poly(coeffs, i) for i in x]\n",
+    "        plt.plot(x, y)\n",
     "    \n",
-    "    # plot the shares\n",
-    "    print()\n",
-    "    print(\"The shares are points on that polynomial:\")\n",
-    "    print(shares)\n",
-    "    x1 = [shares[i][0] for i in range(len(shares))]\n",
-    "    y1 = [shares[i][1] for i in range(len(shares))]\n",
-    "    plt.scatter(x1, y1)\n",
+    "        # plot the shares\n",
+    "        print()\n",
+    "        print(\"The shares are points on that polynomial:\")\n",
+    "        print(shares)\n",
+    "        x1 = [shares[i][0] for i in range(len(shares))]\n",
+    "        y1 = [shares[i][1] for i in range(len(shares))]\n",
+    "        plt.scatter(x1, y1)\n",
     "    \n",
-    "    # plot the secret\n",
-    "    plt.scatter(0, s)\n",
+    "        # plot the secret\n",
+    "        plt.scatter(0, s, color='orange')\n",
     "    \n",
-    "    print()\n",
-    "    print(\"Here is a visual representation (secret in orange).\")\n",
+    "        print()\n",
+    "        print(\"Here is a visual representation (secret in orange).\")\n",
     "        \n",
     "    return shares"
    ]
@@ -96,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, say our secret is the number 42. We'd like to share it among 10 parties (n=10), and we'll allow any 4 of those to recover the secret (t=3, t+1 can recover). Now let's pick a prime number p that's bigger than both the secret and the number of parties (so, p>42). The next largest prime is 43, so let's try that!\n",
+    "For example, say our secret is the number 42. We'd like to share it among 10 parties (n=10), and we'll allow any 4 of those to recover the secret (t+1 can recover, so t=3). Now let's pick a prime number p that's bigger than both the secret and the number of parties (so, p>42). The next largest prime is 43, so let's try that!\n",
     "\n",
     "How would you call the `share` function with these parameters?\n",
     "\n",
@@ -112,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shares = share(42, n=10, t=3, p=43)"
+    "shares = share(42, n=10, t=3, p=43, printout=True)"
    ]
   },
   {
