--- a/spring/ShamirSS.ipynb
+++ b/spring/ShamirSS.ipynb
@@ -182,8 +182,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon(shares, n=10, t=3)"
+    "recon_s = recon([shares[0], shares[1], shares[4], shares[5]], n=10, t=3, printout=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sharing messages\n",
+    "So far we've shared only numbers. This might seem limiting, but the whole world can be represented in numbers! For instance, we can share messages by turning letters into numbers:\n",
+    "\n",
+    "| a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z |\n",
+    "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+    "| 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24 | 25 | 26 |\n",
+    "\n",
+    "Then to send the message \"Hello world!\", we turn it into a list of numbers: `[8, 5, 12, 12, 15, 23, 15, 18, 12, 4]` (for now, to keep things simple, we'll ignore spaces, punctuation, and any other symbols). Then we can share each of the numbers in the list, and each party will have a list of numbers that are shares of the message.\n",
+    "\n",
+    "The functions `share_msg` and `recon_msg` do exactly this. `share_msg` converts each letter in a message to a number and shares each of those numbers. It outputs a list of shares (points) for each party. Notice that the x-coordinate of the points is the same for all the points in one party's set! `recon_msg` takes each party's list of points and reconstructs each letter; then it outputs the recovered message (since we didn't consider spaces, punctuation, etc., those are missing from the reconstructed message)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def share_msg(msg, n, t, p=29):\n",
+    "    arr = convert_msg(msg)\n",
+    "    shares_by_letter = []\n",
+    "    for x in arr:\n",
+    "        shares_by_letter.append(share(x, n, t, p))\n",
+    "    \n",
+    "    shares_by_party = []\n",
+    "    for i in range(n):\n",
+    "        share_i = [row[i] for row in shares_by_letter]\n",
+    "        shares_by_party.append(share_i)\n",
+    "        print(\"Party {}'s share is: {}\".format(i+1, share_i))\n",
+    "    return shares_by_party\n",
+    "\n",
+    "def recon_msg(arr_shares, n, t):\n",
+    "    ans = []\n",
+    "    for i in range(len(arr_shares[0])):\n",
+    "        letter_shares = [arr[i] for arr in arr_shares]\n",
+    "        ans.append(recon(letter_shares, n, t))\n",
+    "    return nums_to_msg(ans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is how we share our example message \"Hello world!\" among 5 parties so that any t+1=3 can recover:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg_shares = share_msg(\"Hello world!\", n=5, t=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here it is, reconstructed using all the shares:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recon_msg(msg_shares, n=5, t=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also reconstruct it using only 3 (or 4) shares:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recon_msg([msg_shares[0], msg_shares[1], msg_shares[3]], n=5, t=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now it's your turn!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
