--- a/spring/ShamirSS.ipynb
+++ b/spring/ShamirSS.ipynb
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "from helper import *\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "#from scipy.interpolate import lagrange"
    ]
   },
   {
@@ -139,29 +140,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recon(shares, n, t):\n",
-    "    if len(shares) < t+1:\n",
-    "        print(\"Not enough shares to reconstruct! ({} < t+1={})\".format(len(shares), t+1))\n",
-    "        return\n",
+    "def recon(shares, n, t, printout=False):\n",
+    "#     if len(shares) < t+1:\n",
+    "#         print(\"Not enough shares to reconstruct! ({} < t+1={})\".format(len(shares), t+1))\n",
+    "#         return\n",
     "    \n",
     "    # plot submitted shares on poly plot?\n",
     "    \n",
-    "    # i Lagrange basis polynomials evaluated at 0\n",
-    "    ell = [1]*len(shares)\n",
-    "    for i in range(len(shares)):\n",
-    "        for j in range(len(shares)):\n",
-    "            if i!=j:\n",
-    "                ell[i] *= float(0-shares[j][0])/(shares[i][0]-shares[j][0])\n",
-    "    \n",
     "    # interpolate\n",
-    "    # f(X) = sum_1^{t+1} ell_i(X) * y_i\n",
-    "    # s = f(0)\n",
-    "    s = 0\n",
-    "    for i in range(len(shares)):\n",
-    "        s += ell[i]*shares[i][1]\n",
+    "    # secret = f(0)\n",
+    "    #f = lagrange([share[0] for share in shares], [share[1] for share in shares])\n",
+    "    #s = round(f(0))\n",
+    "    s = round(interpolate_at(shares, 0))\n",
     "\n",
-    "    print(\"The reconstructed secret is:\")\n",
-    "    return int(s)"
+    "    if printout:\n",
+    "        print(\"The reconstructed secret is: {}\".format(s))\n",
+    "    return s"
    ]
   },
   {
@@ -307,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
