clean up args, add activity text, use built-in lagrange

--- a/spring/ShamirSS.ipynb
+++ b/spring/ShamirSS.ipynb
@@ -21,8 +21,7 @@
    "outputs": [],
    "source": [
     "from helper import *\n",
-    "import matplotlib.pyplot as plt\n",
-    "#from scipy.interpolate import lagrange"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -30,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Share\n",
-    "Here is our sharing function. It takes as input `s` (the secret), `n` (the number of parties to share amongst), `t` (the degree of the polynomial used for sharing, so t+1 is the minimum number of parties needed to reconstruct the secret), and `p` (**REMOVE THIS?**). The input `printout` tells the function whether it should print an explanation while it's working or not."
+    "Here is our sharing function. It takes as input `s` (the secret), `n` (the number of parties to share amongst), and `t` (the degree of the polynomial used for sharing, so t+1 is the minimum number of parties needed to reconstruct the secret). (You don't need to worry about `p`.) The input `printout` tells the function whether it should print an explanation of what it's doing or not."
    ]
   },
   {
@@ -39,14 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def share(s, n, t, p, printout=False):\n",
-    "    # check p\n",
-    "    if not isprime(p):\n",
-    "        print(\"p={} is not prime!\".format(p))\n",
-    "        return\n",
-    "    if p <= n:\n",
-    "        print(\"p={} must be greater than n={}\".format(p, n))\n",
-    "        return\n",
+    "def share(s, n, t, p=0, printout=False):\n",
+    "    if p == 0:\n",
+    "        p = nextprime(s)\n",
     "        \n",
     "    # check t\n",
     "    if t >= n:\n",
@@ -59,9 +53,9 @@
     "        return\n",
     "        \n",
     "    ### the interesting part ###########################\n",
+    "    # pick a random polynomial\n",
     "    coeffs = []\n",
     "    for i in range(t):\n",
-    "        # sample coefficients from F_p = {0, ..., p-1}\n",
     "        coeffs.append(randint(0,p-1))\n",
     "    # secret is the y-intercept / constant term of the poly\n",
     "    coeffs.append(s)\n",
@@ -100,14 +94,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, say our secret is the number 42. We'd like to share it among 10 parties (n=10), and we'll allow any 4 of those to recover the secret (t+1 can recover, so t=3). Now let's pick a prime number p that's bigger than both the secret and the number of parties (so, p>42). The next largest prime is 43, so let's try that!\n",
+    "### Example\n",
+    "For example, say our secret is the number 42. We'd like to share it among 10 parties (n=10), and we'll allow any 4 of those to recover the secret (t+1 can recover, so t=3).\n",
     "\n",
-    "How would you call the `share` function with these parameters?\n",
-    "\n",
-    "**Answer**\n",
-    "```\n",
-    "shares = share(42, 10, 3, 43)\n",
-    "```"
+    "Here's how we would use (\"call\") the `share` function. Both lines below do the same thing; sometimes adding in the names of the inputs in the function call makes it easier to remember what's what."
    ]
   },
   {
@@ -116,7 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shares = share(42, n=10, t=3, p=43, printout=True)"
+    "shares = share(42, 10, 3, True)\n",
+    "shares = share(42, n=10, t=3, printout=True)"
    ]
   },
   {
@@ -131,7 +122,7 @@
    "metadata": {},
    "source": [
     "## Reconstruct\n",
-    "Say 4 of those parties (Alice, Bob, Charlie, and Diane) want to recover the secret. We set $t=3$, so they should be able to do this (remember, a minimum of $t+1$ parties is needed). Together, they hold 4 points on the degree-3 polynomial, which uniquely defines it! They can pool this information to recover the polynomial $f$ and evaluate it at $x=0$ using the `recon` function:"
+    "Say 4 of those parties (Alice, Bob, Charlie, and Diane) want to recover the secret. We let t=3, so they should be able to do this (remember, a minimum of t+1 parties is needed). Together, they hold 4 points on the degree-3 polynomial, which uniquely defines it! Remember that they can pool this information to recover the polynomial, which we'll call $f$, and evaluate it at x=0 to get back the secret. This is what the `recon` function does:"
    ]
   },
   {
@@ -140,18 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recon(shares, n, t, printout=False):\n",
-    "#     if len(shares) < t+1:\n",
-    "#         print(\"Not enough shares to reconstruct! ({} < t+1={})\".format(len(shares), t+1))\n",
-    "#         return\n",
-    "    \n",
-    "    # plot submitted shares on poly plot?\n",
-    "    \n",
-    "    # interpolate\n",
-    "    # secret = f(0)\n",
-    "    #f = lagrange([share[0] for share in shares], [share[1] for share in shares])\n",
-    "    #s = round(f(0))\n",
-    "    s = round(interpolate_at(shares, 0))\n",
+    "def recon(shares, printout=False):\n",
+    "    # interpolate f and recover secret = f(0)\n",
+    "    f = interpolate(shares)\n",
+    "    s = round(f(0))\n",
     "\n",
     "    if printout:\n",
     "        print(\"The reconstructed secret is: {}\".format(s))\n",
@@ -162,12 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assuming Alice, Bob, Charlie, and Diane have the points for $x=1,2,3,4$, respectively, can you use the shares of 42 we created earlier to recover the secret?\n",
-    "\n",
-    "**Answer**\n",
-    "```\n",
-    "recon(shares[:4], n=10, t=3)\n",
-    "```"
+    "Assuming Alice, Bob, Charlie, and Diane have the points for x=1,2,3,4, respectively, they can you use their shares of 42 (which we created earlier) to recover the secret as follows:"
    ]
   },
   {
@@ -176,7 +154,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon_s = recon([shares[0], shares[1], shares[4], shares[5]], n=10, t=3, printout=True)"
+    "recon_s = recon([shares[0], shares[1], shares[2], shares[3]], printout=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might notice that the shares we used were numbered starting at 0 instead of 1. This is because Python is a **zero-indexed language**: it starts counting at 0. Another thing to keep in mind is that we could have used any four shares, not just the first four. Play around with the numbers above and see if you still get the same answer when you use different shares."
    ]
   },
   {
@@ -190,9 +175,11 @@
     "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
     "| 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24 | 25 | 26 |\n",
     "\n",
-    "Then to send the message \"Hello world!\", we turn it into a list of numbers: `[8, 5, 12, 12, 15, 23, 15, 18, 12, 4]` (for now, to keep things simple, we'll ignore spaces, punctuation, and any other symbols). Then we can share each of the numbers in the list, and each party will have a list of numbers that are shares of the message.\n",
+    "Then, to send the message \"Hello world!\", we turn it into a list of numbers: `[8, 5, 12, 12, 15, 23, 15, 18, 12, 4]`. (To keep things simple, we'll ignore spaces, punctuation, and other symbols.) Then we can share each of the numbers in the list, and each party will have a list of numbers that are shares of the message.\n",
     "\n",
-    "The functions `share_msg` and `recon_msg` do exactly this. `share_msg` converts each letter in a message to a number and shares each of those numbers. It outputs a list of shares (points) for each party. Notice that the x-coordinate of the points is the same for all the points in one party's set! `recon_msg` takes each party's list of points and reconstructs each letter; then it outputs the recovered message (since we didn't consider spaces, punctuation, etc., those are missing from the reconstructed message)."
+    "The functions `share_msg` and `recon_msg` do exactly this. `share_msg` converts each letter in a message to a number and shares each of those numbers. It outputs a list of shares (points) for each party. Notice that all the points in one party's set have the same x-coordinates!\n",
+    "\n",
+    "`recon_msg` takes each party's list of points and reconstructs each letter; then it outputs the recovered message (since we didn't consider spaces, punctuation, etc., those are missing from the reconstructed message)."
    ]
   },
   {
@@ -214,11 +201,11 @@
     "        print(\"Party {}'s share is: {}\".format(i+1, share_i))\n",
     "    return shares_by_party\n",
     "\n",
-    "def recon_msg(arr_shares, n, t):\n",
+    "def recon_msg(arr_shares):\n",
     "    ans = []\n",
     "    for i in range(len(arr_shares[0])):\n",
     "        letter_shares = [arr[i] for arr in arr_shares]\n",
-    "        ans.append(recon(letter_shares, n, t))\n",
+    "        ans.append(recon(letter_shares))\n",
     "    return nums_to_msg(ans)"
    ]
   },
@@ -226,6 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example\n",
     "Here is how we share our example message \"Hello world!\" among 5 parties so that any t+1=3 can recover:"
    ]
   },
@@ -242,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And here it is, reconstructed using all the shares:"
+    "And here is the reconstruction, first using all the shares, then using only 3 of them. As long as we provide at least t+1=3 shares to the reconstruction function, it'll work."
    ]
   },
   {
@@ -251,14 +239,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon_msg(msg_shares, n=5, t=5)"
+    "print(recon_msg(msg_shares))\n",
+    "print(recon_msg([msg_shares[0], msg_shares[1], msg_shares[3]]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also reconstruct it using only 3 (or 4) shares:"
+    "## Now it's your turn!\n",
+    "We're going to break into groups and you'll have a chance to share your own messages among the group! Set `n` equal to the group size (including you!) and then pick whatever threshold `t` you want to determine how many people can reconstruct. Pass out the shares of your secret message (you don't even have to give them all out!) and ask your group members to recover your message. Below is some code you can use, but feel free to play around with it and change parts of it as you like!\n",
+    "\n",
+    "Some ideas:\n",
+    "- Set t=(n-2)/2 and pass out all the shares. Then split your group in half and have each half work together to recover the message. Report back with your message – both subgroups should get the same thing!\n",
+    "- Set t=n-2 and pass out all the shares. Ask your group to recover your message without helping. Even without your points, they should still be able to recover the message."
    ]
   },
   {
@@ -267,14 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon_msg([msg_shares[0], msg_shares[1], msg_shares[3]], n=5, t=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Now it's your turn!"
+    "print(\"Pass out a lists of points to each of your group members: \")\n",
+    "msg_shares = share_msg(\"Your message here!\", n=5, t=4) # change n, t as you like"
    ]
   },
   {
@@ -282,7 +270,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# enter lists of points (shares) to reconstruct like this: \n",
+    "recon_msg([\n",
+    "    [(1, 39), (1, 57), (1, 60), (1, 12), (1, 55), (1, 55), (1, 37), (1, 19), (1, 38), (1, 24), (1, 38)],\n",
+    "    [(4, 267), (4, 405), (4, 456), (4, 45), (4, 454), (4, 319), (4, 181), (4, 91), (4, 290), (4, 117), (4, 92)],\n",
+    "    [(5, 399), (5, 601), (5, 676), (5, 60), (5, 683), (5, 459), (5, 245), (5, 123), (5, 438), (5, 160), (5, 110)]\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
