update after spring activity

--- a/spring/ShamirSS.ipynb
+++ b/spring/ShamirSS.ipynb
@@ -20,6 +20,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### uncomment below for CoLab only\n",
+    "# from pydrive.auth import GoogleAuth\n",
+    "# from pydrive.drive import GoogleDrive\n",
+    "# from google.colab import auth\n",
+    "# from oauth2client.client import GoogleCredentials\n",
+    "\n",
+    "# auth.authenticate_user()\n",
+    "# gauth = GoogleAuth()\n",
+    "# gauth.credentials = GoogleCredentials.get_application_default()\n",
+    "# drive = GoogleDrive(gauth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### uncomment below for CoLab only\n",
+    "# module = drive.CreateFile({'id':'1-i5Q4b1T7HIV2j5EqhbnX46t_tR9Fq7o'})\n",
+    "# module.GetContentFile('helper.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from helper import *\n",
     "import matplotlib.pyplot as plt"
    ]
